nearly ready for production

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block title %}À propos{% endblock %}
 
+{% block description %}
+L'équipe PolyLearn
+{% endblock %}
+
+
+{% block content %}
 <div class="grey-bg">
 
   <div>
@@ -10,7 +16,7 @@
 
   <div class="container mdl-shadow--2dp mdl-color--white" style="border-radius:2px;">
 
-    <section class="mdl-grid">
+    <section class="mdl-grid about">
 
         <div class="mdl-cell mdl-cell--1-col"></div>
 
@@ -30,7 +36,7 @@
         <div class="mdl-cell mdl-cell--2-col"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
-          <img src="http://polylearn.co/img/338337ae.clem.png" class="" height="120" width="120">
+          <img src="http://polylearn.co/img/338337ae.clem.png" height="120" width="120">
           <h2 class="mdl-typography--display-1">Clément VILLAIN</h2>
           <h3 class="mdl-typography--title-color-contrast">CTO et Co-fondateur</h3>
 
