--- a/static/styles.css
+++ b/static/styles.css
@@ -30,6 +30,14 @@ a img{
   border: 0px;
 }
 
+a {
+  text-decoration: none;
+}
+
+h1 {
+  margin-top: 0px;
+}
+
 ::-moz-selection {
   background-color: #64ffda;
   color: black;
@@ -38,6 +46,16 @@ a img{
 ::selection {
   background-color: #64ffda;
   color: black;
+}
+
+#view-source {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  z-index: 900;
 }
 
 .android-search-box .mdl-textfield__input {
@@ -59,7 +77,7 @@ a img{
   right: 20%;
   bottom: -26px;
   z-index: 3;
-  background: #64ffda !important;
+  background: #637EFF !important;
   color: black !important;
 }
 
@@ -324,7 +342,7 @@ a img{
 
 .android-wear-section {
   position: relative;
-  background: url('https://images.unsplash.com/photo-1444006978051-63ee08fa6291?ixlib=rb-0.3.5&q=80&fm=jpg&w=1080&fit=max&s=5ec8553220e2a2b6d248cf2c30050e50') center top no-repeat;
+  background: url('./images/techno.jpg') center top no-repeat;
   background-size: cover;
   height: 600px;
 }
@@ -351,11 +369,11 @@ a img{
 
 .android-link {
   text-decoration: none;
-  color: #8bc34a !important;
+  color: #4A5EC2 !important;
 }
 
   .android-link:hover {
-    color: #7cb342 !important;
+    color: #4253B2 !important;
   }
 
   .android-link .material-icons {
@@ -394,7 +412,7 @@ a img{
   }
 
 .android-customized-section-image {
-  background: url('https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-0.3.5&q=80&fm=jpg&w=1080&fit=max&s=104cd9c0c82ea971d90f2d6b01e3f428') center center no-repeat;
+  background: url('./images/best.jpg') center center no-repeat;
   background-size: cover;
   height: 400px;
 }
@@ -456,7 +474,7 @@ a img{
 }
 
   .android-footer a:hover {
-    color: #8bc34a;
+    color: #4253B2;
   }
 
   .android-footer .mdl-mega-footer--top-section::after {
@@ -543,16 +561,6 @@ a img{
     padding-top: 8px;
   }
 
-  .android-create-character {
-    padding-top: 200px;
-    font-size: 16px;
-    padding-bottom: 50px;
-  }
-
-  .android-create-character img {
-    height: 12px;
-  }
-
   .android-fab {
     display: none;
   }
@@ -603,16 +611,17 @@ a .about-panel--components:hover h2 {
 
 .about-panel-1 {
   background-color: blue;
-  background: url('https://images.unsplash.com/photo-1430278896981-33ba4119856e?ixlib=rb-0.3.5&q=80&fm=jpg&w=1080&fit=max&s=1214ca5cdb3d49a7427f0425f17fddd4') center center no-repeat;
+  background: url('./images/exam/toeic.jpg') center center no-repeat;
   background-size: cover;
 }
 
 .about-panel-2 {
   background-color: pink;
-  background: url('https://images.unsplash.com/photo-1420574166894-249516923cbb?dpr=2&fit=crop&fm=jpg&h=700&ixlib=rb-0.3.5&q=50&w=1300') center center no-repeat;
+  background: url('./images/exam/code.jpg') center center no-repeat;
   background-size: cover;
 }
 
+/* helper class */
 .img-responsive-100 {
   width: 100%;
   height: auto;
@@ -631,6 +640,14 @@ a .about-panel--components:hover h2 {
 
 .grey-bg {
   background-color: #f3f3f3;
+}
+
+.school-bg {
+  background: url('images/school.jpg') center repeat repeat;;
+}
+
+.text-success {
+  color : #0f9d58;
 }
 
 
@@ -716,7 +733,7 @@ a .about-panel--components:hover h2 {
   z-index: 999;
 }
 
-.mdl-demo.mdl-layout__content section:not(:last-of-type) {
+.mdl-demo section:not(:last-of-type) {
   position: relative;
   margin-bottom: 48px;
 }
@@ -733,6 +750,14 @@ a .about-panel--components:hover h2 {
 }
 .mdl-demo section > .section__play-btn {
   min-height: 200px;
+  background: url('./images/best.jpg') center center no-repeat;
+  background-size: cover;
+}
+
+.section__play-btn-2 {
+  min-height: 200px;
+  background: url('./images/techno.jpg') center center no-repeat;
+  background-size: cover;
 }
 .mdl-demo section > header > .material-icons {
   font-size: 3rem;
@@ -760,15 +785,21 @@ a .about-panel--components:hover h2 {
   margin: 0;
   margin-bottom: 0.5em;
 }
-.mdl-demo section .section__text a {
-  text-decoration: none;
-}
+
 .mdl-demo section .section__circle-container > .section__circle-container__circle {
-  width: 64px;
-  height: 64px;
+  width: 100px;
+  height: 100px;
   border-radius: 32px;
   margin: 8px 0;
+  text-align: center;
+  color: white;
 }
+
+.mdl-demo section .section__circle-container i {
+  font-size: 60px;
+  padding-top: 20px;
+}
+
 .mdl-demo section.section--footer .section__circle--big {
   width: 100px;
   height: 100px;
@@ -821,4 +852,72 @@ a .about-panel--components:hover h2 {
 }
 .mdl-demo .mdl-menu__container {
   z-index: 99;
+}
+
+/* Square card */
+.demo-card-square .mdl-card__title-text {
+  color: white;
+}
+
+.demo-card-square .mdl-card__title {
+  height: 130px;
+}
+
+/* Image card */
+.demo-card-image.mdl-card {
+  width: 256px;
+  height: 256px;
+}
+.demo-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.demo-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+
+/* about */
+.about img {
+  border-radius: 50%;
+}
+
+
+.demo-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #3F51B5;
+  flex-shrink: 0;
+}
+
+.demo-main {
+  margin-top: -35vh;
+  flex-shrink: 0;
+}
+
+.demo-header .mdl-layout__header-row {
+  padding-left: 40px;
+}
+
+.demo-container {
+  max-width: 1600px;
+  width: calc(100% - 16px);
+  margin: 0 auto;
+}
+
+.demo-content {
+  border-radius: 2px;
+  padding: 80px 56px;
+  margin-bottom: 80px;
+}
+
+.demo-layout.is-small-screen .demo-content {
+  padding: 40px 28px;
+}
+
+.demo-content h3 {
+  margin-top: 48px;
 }
