--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,23 +1,5 @@
 <section class="mdl-color--grey-800 mdl-mega-footer">
 
-<!-- Image card -->
-<style>
-.demo-card-image.mdl-card {
-  width: 256px;
-  height: 256px;
-}
-.demo-card-image > .mdl-card__actions {
-  height: 52px;
-  padding: 16px;
-  background: rgba(0, 0, 0, 0.2);
-}
-.demo-card-image__filename {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
-}
-</style>
-
   <div class="mdl-grid">
     <a href="#">
     <div class="demo-card-image mdl-card mdl-shadow--2dp mdl-cell about-panel-1">
@@ -36,7 +18,6 @@
       </div>
     </div>
     </a>
-
   </div>
 
 </section>
@@ -44,15 +25,21 @@
 <footer class="android-footer mdl-mega-footer">
   <div class="mdl-mega-footer--top-section">
     <div class="mdl-mega-footer--left-section">
-      <button class="mdl-mega-footer--social-btn"></button>
+      <a href="https://www.facebook.com/polylearn.co/">
+      <img src="https://cdn2.iconfinder.com/data/icons/micon-social-pack/512/facebook-48.png">
+      </a>
       &nbsp;
-      <button class="mdl-mega-footer--social-btn"></button>
+      <a href="#">
+      <img src="https://cdn2.iconfinder.com/data/icons/micon-social-pack/512/googleplus-48.png">
+      </a>
       &nbsp;
-      <button class="mdl-mega-footer--social-btn"></button>
+      <a href="https://www.google.com/+Polylearn">
+      <img src="https://cdn2.iconfinder.com/data/icons/micon-social-pack/512/twitter-48.png">
+      </a>
     </div>
     <div class="mdl-mega-footer--right-section">
       <a class="mdl-typography--font-light" href="#top">
-        Back to Top
+        Revenir en haut
         <i class="material-icons">expand_less</i>
       </a>
     </div>
@@ -60,32 +47,35 @@
 
   <div class="mdl-mega-footer--middle-section">
     <p class="mdl-typography--font-light">PolyLearn © 2015</p>
-    <p class="mdl-typography--font-light">Redécouvrez le monde des révisions</p>
+    <p class="mdl-typography--font-light">Réussir n'a jamais été aussi facile</p>
   </div>
 
   <div class="mdl-mega-footer--bottom-section">
     <a class="android-link android-link-menu mdl-typography--font-light" id="version-dropdown">
-      Versions
+      Les examens
       <i class="material-icons">arrow_drop_up</i>
     </a>
     <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="version-dropdown">
-      <li class="mdl-menu__item">5.0 Lollipop</li>
-      <li class="mdl-menu__item">4.4 KitKat</li>
-      <li class="mdl-menu__item">4.3 Jelly Bean</li>
-      <li class="mdl-menu__item">Android History</li>
+      <li class="mdl-menu__item">TOEIC/BULATS</li>
+      <li class="mdl-menu__item">Code de la route</li>
     </ul>
+
+    <!--
     <a class="android-link android-link-menu mdl-typography--font-light" id="developers-dropdown">
-      For Developers
+      Pour les organismes de formations et écoles
       <i class="material-icons">arrow_drop_up</i>
     </a>
     <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="developers-dropdown">
-      <li class="mdl-menu__item">App developer resources</li>
-      <li class="mdl-menu__item">Android Open Source Project</li>
-      <li class="mdl-menu__item">Android SDK</li>
-      <li class="mdl-menu__item">Android for Work</li>
+      <li class="mdl-menu__item">Nos offres</li>
+      <li class="mdl-menu__item">Nos avantages</li>
     </ul>
-    <a class="android-link mdl-typography--font-light" href="">Blog</a>
+  -->
+
+
+    <a class="android-link mdl-typography--font-light" href="{{ url_for('contact')}}">Nous contacter</a>
+    <!--
     <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
+  -->
   </div>
 
 </footer>
