--- a/templates/header.html
+++ b/templates/header.html
@@ -3,30 +3,20 @@
     <a href="{{ url_for('index')}}">
     <span class="android-title mdl-layout-title josefin">
       <img class="android-logo-image" height="40px" src="http://polylearn.co/img/65ad7dd4.logo.png">
-      PolyLearn
+      <span>PolyLearn</span>
     </span>
     </a>
     <!-- Add spacer, to align navigation to the right in desktop -->
-    <
     <div class="android-header-spacer mdl-layout-spacer"></div>
-    <!--
-    <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
-      <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
-        <i class="material-icons">email</i>
-      </label>
-      <div class="mdl-textfield__expandable-holder">
-        <input class="mdl-textfield__input" type="text" id="search-field" />
-      </div>
-    </div>
-  -->
+
     <!-- Navigation -->
     <div class="android-navigation-container">
       <nav class="android-navigation mdl-navigation">
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{ url_for('products')}}">Nos produits</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{ url_for('products')}}">Les examens</a>
         <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{ url_for('concept')}}">Le concept</a>
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">La pédagogie</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{url_for('pedagogie')}}">La pédagogie</a>
         <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{url_for('about')}}">L'équipe</a>
-        <a class=" mdl-typography--text-uppercase" href="">
+        <a class=" mdl-typography--text-uppercase" href="{{url_for('contact')}}">
           <label class="mdl-button mdl-button--icon" for="search-field">
             <i class="material-icons">email</i>
           </label>
@@ -61,26 +51,11 @@
     <img class="android-logo-image" src="http://polylearn.co/img/65ad7dd4.logo.png">
   </span>
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="">Nos produits</a>
-    <a class="mdl-navigation__link" href="">Le concept</a>
-    <a class="mdl-navigation__link" href="">La pédagogie</a>
-    <a class="mdl-navigation__link" href="">L'équipe</a>
-    <a class="mdl-navigation__link" href="">La pédagogie</a>
+    <a class="mdl-navigation__link" href="{{ url_for('products')}}">Les examens</a>
+    <a class="mdl-navigation__link" href="{{ url_for('concept')}}">Le concept</a>
+    <a class="mdl-navigation__link" href="{{ url_for('products')}}">La pédagogie</a>
+    <a class="mdl-navigation__link" href="{{ url_for('about')}}">L'équipe</a>
     <div class="android-drawer-separator"></div>
-    <span class="mdl-navigation__link" href="">Versions</span>
-    <a class="mdl-navigation__link" href="">Lollipop 5.0</a>
-    <a class="mdl-navigation__link" href="">KitKat 4.4</a>
-    <a class="mdl-navigation__link" href="">Jelly Bean 4.3</a>
-    <a class="mdl-navigation__link" href="">Android history</a>
-    <div class="android-drawer-separator"></div>
-    <span class="mdl-navigation__link" href="">Resources</span>
-    <a class="mdl-navigation__link" href="">Official blog</a>
-    <a class="mdl-navigation__link" href="">Android on Google+</a>
-    <a class="mdl-navigation__link" href="">Android on Twitter</a>
-    <div class="android-drawer-separator"></div>
-    <span class="mdl-navigation__link" href="">For developers</span>
-    <a class="mdl-navigation__link" href="">App developer resources</a>
-    <a class="mdl-navigation__link" href="">Android Open Source Project</a>
-    <a class="mdl-navigation__link" href="">Android SDK</a>
+    <a class="mdl-navigation__link" href="{{ url_for('contact')}}">Nous contacter</a>
   </nav>
 </div>
