--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,13 +16,50 @@ En savoir plus sur les avantages et le concept de la plateforme.
     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
 
       <div class="demo-crumbs mdl-color-text--grey-500">
-        Besoin d'aide ou de plus d'informations, n'hésitez pas à nous contacter.
+        Besoin d'aide ou de plus d'informations.
       </div>
 
       <h3>Nous contacter</h3>
         <p>
-          Cillum dolor esse sit incididunt velit eiusmod magna ad nostrud officia aute dolor dolor. Magna esse ullamco pariatur adipisicing consectetur eu commodo officia. Ex cillum consequat mollit minim elit est deserunt occaecat nisi amet. Quis aliqua nostrud Lorem occaecat sunt. Eiusmod quis amet ullamco aliquip dolore ut incididunt duis adipisicing. Elit consequat nisi eiusmod aute ipsum sunt veniam do est. Occaecat mollit aliquip ut proident consectetur amet ex dolore consectetur aliqua elit.
+
+          <br>
+          Laissez-nous un message en remplissant le formulaire ci-dessous, nous vous recontaterons.
         </p>
+
+        <form action="https://formspree.io/florent@polylearn.co"
+      method="POST">
+          <input type="text" name="_gotcha" style="display:none" />
+          <input type="hidden" name="_next" value="http://polylearn.co/thanks" />
+
+          <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--6-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" name="name" type="text" id="name">
+              <label class="mdl-textfield__label" for="name">Nom</label>
+            </div>
+
+            <div class=" mdl-cell mdl-cell--6-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" name="_replyto" type="email" id="email">
+              <label class="mdl-textfield__label" for="email">Email</label>
+            </div>
+
+            <div class=" mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" name="_subject" type="text" id="subject">
+              <label class="mdl-textfield__label" for="subject">Sujet</label>
+            </div>
+
+            <br>
+            <div class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield" style="width:100%;">
+              <textarea class="mdl-textfield__input" name="message" type="text" rows= "3" id="message" ></textarea>
+              <label class="mdl-textfield__label" for="message">En quoi pouvons nous vous aider ?</label>
+            </div>
+          </div>
+
+          <br>
+          <button type="submit" value="Send" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+            Envoyer
+          </button>
+
+        </form>
     </div>
   </div>
 </main>
