--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}PolyLearn{% endblock %}</title>
 
+    <meta name="author" content="PolyLearn">
+    <meta name="generator" content="PolyLearn">
+
+    <meta name="theme-color" content="#2B3882">
+
+    <meta property="og:description" content="PolyLearn est une plateforme d'entrainement au TOEIC qui cible vos lacunes pour optimiser votre temps de révision et votre score.">
+    <meta property="og:title" content="Plateforme d'entrainement intelligente au TOEIC">
+    <meta property="og:site_name" content="PolyLearn.co">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://polylearn.co">
+    <meta property="fb:app_id" content="367497400125453">
     <!-- Page styles -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
