--- a/templates/base.html
+++ b/templates/base.html
@@ -48,5 +48,10 @@
 
   {% block script %}{% endblock %}
 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+  <script>
+  +function(l,e){(ct=this[GoogleAnalyticsObject='ct']||function(l,e){(ct.q=ct.q||[]).push(arguments)}).l=+new Date,l=document.createElement('script'),l.src='//www.google-analytics.com/analytics.js',(e=document.getElementsByTagName('script')[0]).parentNode.insertBefore(l,e);try{localStorage.setItem(ct.l,ct.l),l=localStorage.getItem(ct.l)-ct.l,localStorage.removeItem(ct.l)}catch(l){};ct('create','UA-67551062-2',l?{}:{clientId:localStorage.clientId,storage:'none'}),ct(function(l,e){localStorage.clientId=l.get('clientId')}),ct('send','pageview')}()
+  </script>
+
   </body>
 </html>
