--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %}À propos{% endblock %}
 
 {% block description %}
-L'équipe PolyLearn
+Découvrez l'équipe de PolyLearn
 {% endblock %}
 
 
