--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Découvrir le concept PolyLearn{% endblock %}
+{% block title %}Nous contacter{% endblock %}
 
 {% block description %}
-En savoir plus sur les avantages et le concept de la plateforme.
+Besoin d'aide ou de plus d'informations.
 {% endblock %}
 
 {% block content %}
