--- a/templates/pedagogie.html
+++ b/templates/pedagogie.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Découvrir la pédagogie PolyLearn{% endblock %}
+{% block title %}La pédagogie{% endblock %}
 
 {% block description %}
-Découvrir la pédagogie PolyLearn.
+Une pédagogie sur-mesure et une progression optimisée
 {% endblock %}
 
 {% block content %}
@@ -30,54 +30,11 @@ Découvrir la pédagogie PolyLearn.
         </section>
 
 
-<div class="mdl-grid container mdl-typography--text-center">
-  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
-    <div>
-      <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/078-128.png">
-      <br>
-    </div>
-    <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Cours</div>
-  </div>
 
-  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
-    <div>
-      <img class="android-screen-image" src="http://polylearn.co/img/icons/a6641ac3.target.png">
-      <br>
-    </div>
-    <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Identification des faiblesses</div>
-  </div>
+        {% include 'includes/features.html' %}
 
-  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
-    <div>
-      <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/062-128.png">
-      <br>
-    </div>
-    <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Exercices</div>
-  </div>
-
-
-  <div class="mdl-cell--2-col mdl-cell--hide-phone mdl-cell--hide-tablet">
-  </div>
-
-  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
-    <div>
-      <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/052-128.png">
-      <br>
-    </div>
-    <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Examens</div>
-  </div>
-  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
-    <div>
-      <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/056-128.png">
-      <br>
-    </div>
-    <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Suivi</div>
-  </div>
-
-</div>
-
-<br>
-<br>
+        <br>
+        <br>
 
           <section class="section--footer mdl-color--white mdl-grid">
             <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
