--- a/templates/products.html
+++ b/templates/products.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Les examens proposés par PolyLearn{% endblock %}
+{% block title %}Les examens{% endblock %}
 
 {% block description %}
-Liste des examens que PolyLearn peut vous aider à réussir
+PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
 {% endblock %}
 
 {% block content %}
@@ -43,7 +43,7 @@ Liste des examens que PolyLearn peut vous aider à réussir
         </ul>
       </div>
       <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised">
           Accéder
         </a>
       </div>
