--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="{% block description %}{% endblock %}">
+    <meta name="description" content="{% block description %}PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}PolyLearn{% endblock %}</title>
 
@@ -28,8 +28,9 @@
     <meta name="generator" content="PolyLearn">
 
     <meta name="theme-color" content="#2B3882">
+    {% include 'includes/manifest.html' %}
 
-    <meta property="og:description" content="PolyLearn est une plateforme d'entrainement au TOEIC qui cible vos lacunes pour optimiser votre temps de révision et votre score.">
+    <meta property="og:description" content="PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.">
     <meta property="og:title" content="Plateforme d'entrainement intelligente au TOEIC">
     <meta property="og:site_name" content="PolyLearn.co">
     <meta property="og:type" content="website">
@@ -38,7 +39,7 @@
     <!-- Page styles -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/material-design-lite/material.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
@@ -55,7 +56,7 @@
     </div>
   </div>
 
-  <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
+  <script src="{{url_for('static', filename='vendor/material-design-lite/material.min.js')}}"></script>
 
   {% block script %}{% endblock %}
 
