some mssing links, typo, img profile, layout, manifest

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@ Découvrez l'équipe de PolyLearn
         <div class="mdl-cell mdl-cell--1-col"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
-          <img src="http://polylearn.co/img/41cced09.flo.jpg" class="" height="120" width="120">
+          <img src="{{url_for('static', filename='images/team/flo.jpg')}}" class="" height="120" width="120">
           <h2 class="mdl-typography--display-1">Florent CLAPIÉ</h2>
           <h3 class="mdl-typography--title-color-contrast">CEO et Co-fondateur</h3>
 
@@ -36,14 +36,14 @@ Découvrez l'équipe de PolyLearn
         <div class="mdl-cell mdl-cell--2-col"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
-          <img src="http://polylearn.co/img/338337ae.clem.png" height="120" width="120">
+          <img src="{{url_for('static', filename='images/team/clem.png')}}" height="120" width="120">
           <h2 class="mdl-typography--display-1">Clément VILLAIN</h2>
           <h3 class="mdl-typography--title-color-contrast">CTO et Co-fondateur</h3>
 
           <p>
             Passionné depuis toujours d'informatique, j'ai naturellement suivi cette voie en école d'ingénieur.
             Je me suis alors spécialisé dans le Machine Learning domaine en pleine évolution qui m'intéresse énormément.
-            Je m'applique ainsi à optimiser différentes techniques de Data Mining dans le fonctionnement de nos outils pédagogiques afin que ceux ci soient les plus efficients possibles
+            Je m'applique ainsi à optimiser différentes techniques de Data Mining dans le fonctionnement de nos outils pédagogiques afin que ceux-ci soient les plus efficients possibles.
           </p>
         </div>
 
