--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,7 @@ Besoin d'aide ou de plus d'informations.
         <form action="https://formspree.io/florent@polylearn.co"
       method="POST">
           <input type="text" name="_gotcha" style="display:none" />
-          <input type="hidden" name="_next" value="http://polylearn.co/thanks" />
+          <input type="hidden" name="_next" value="http://polylearn.co/thanks.html" />
 
           <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--6-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
