--- a/templates/header.html
+++ b/templates/header.html
@@ -38,22 +38,25 @@
       <li class="mdl-menu__item">Android History</li>
     </ul>
   -->
-
-    <span class="android-mobile-title mdl-layout-title">
-      <!--<img class="android-logo-image" src="http://polylearn.co/img/65ad7dd4.logo.png">-->
-      PolyLearn
-    </span>
+    <a href="{{ url_for('index')}}">
+      <span class="android-mobile-title mdl-layout-title">
+        <!--<img class="android-logo-image" src="http://polylearn.co/img/65ad7dd4.logo.png">-->
+        PolyLearn
+      </span>
+    </a>
   </div>
 </div>
 
 <div class="android-drawer mdl-layout__drawer">
   <span class="mdl-layout-title">
-    <img class="android-logo-image" src="{{url_for('static', filename='images/logo.png')}}">
+    <a href="{{ url_for('index')}}">
+      <img class="android-logo-image" src="{{url_for('static', filename='images/logo.png')}}">
+    </a>
   </span>
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="{{ url_for('products')}}">Les examens</a>
     <a class="mdl-navigation__link" href="{{ url_for('concept')}}">Le concept</a>
-    <a class="mdl-navigation__link" href="{{ url_for('products')}}">La pédagogie</a>
+    <a class="mdl-navigation__link" href="{{ url_for('pedagogie')}}">La pédagogie</a>
     <a class="mdl-navigation__link" href="{{ url_for('about')}}">L'équipe</a>
     <div class="android-drawer-separator"></div>
     <a class="mdl-navigation__link" href="{{ url_for('contact')}}">Nous contacter</a>
