--- a/templates/includes/second_footer.html
+++ b/templates/includes/second_footer.html
@@ -4,7 +4,7 @@
       <i class="material-icons">trending_up</i>
     </div>
   </div>
-  <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+  <div class="mdl-cell--middle section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
     <h5>Une progression rapide</h5>
     Tous les jours, nous travaillons à vous proposer des outils permettant une progression la plus rapide possible.
   </div>
@@ -13,7 +13,7 @@
       <i class="material-icons">thumb_up</i>
     </div>
   </div>
-  <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+  <div class="mdl-cell--middle section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
     <h5>Des utilisateurs satisfaits</h5>
     La satisfaction des utilisateurs est au centre de notre travail.
   </div>
