--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,16 @@
 
 <div class="android-be-together-section mdl-typography--text-center">
   <div class="android-font android-slogan">Réussir n'a jamais été aussi facile</div>
-  <div class="android-font android-sub-slogan">Bienvenue sur PolyLearn... nous utilisons une technologie d'ancrage mémoriel</div>
+  <div class="android-font android-sub-slogan">Bienvenue sur PolyLearn, nous utilisons une technologie d'ancrage mémoriel</div>
 
   <div class="mdl-grid">
-    <a href="http://polylearn.co" class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-phone">
+    <a href="{{ app_url('toeic') }}" class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-phone">
     <section class="about-panel-1 about-panel--components mdl-color-text--white">
       <h2>TOEIC/BULATS</h2>
     </section>
     </a>
 
-    <a href="http://polylearn.co" class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+    <a href="#" class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
     <section class="about-panel-2 about-panel--components mdl-color-text--white">
       <h2>Code de la Route</h2>
     </section>
