--- a/templates/products.html
+++ b/templates/products.html
@@ -43,7 +43,7 @@ PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
         </ul>
       </div>
       <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised">
+        <a href="{{ app_url('toeic') }}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised">
           Accéder
         </a>
       </div>
