--- a/templates/includes/manifest.html
+++ b/templates/includes/manifest.html
@@ -1,21 +1,21 @@
-<link rel="apple-touch-icon" sizes="57x57" href="http://polylearn.co/static/images/icons/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="http://polylearn.co/static/images/icons/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="http://polylearn.co/static/images/icons/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="http://polylearn.co/static/images/icons/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="http://polylearn.co/static/images/icons/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="http://polylearn.co/static/images/icons/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="http://polylearn.co/static/images/icons/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="http://polylearn.co/static/images/icons/apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://polylearn.co/static/images/icons/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="http://polylearn.co/static/images/icons/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="http://polylearn.co/static/images/icons/android-chrome-192x192.png" sizes="192x192">
-<link rel="icon" type="image/png" href="http://polylearn.co/static/images/icons/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="http://polylearn.co/static/images/icons/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="http://polylearn.co/static/images/icons/manifest.json">
-<link rel="mask-icon" href="http://polylearn.co/static/images/icons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="http://polylearn.co/static/images/icons/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="/static/images/icons/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/static/images/icons/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/static/images/icons/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/static/images/icons/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/static/images/icons/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/static/images/icons/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/static/images/icons/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/static/images/icons/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/static/images/icons/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="/static/images/icons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/static/images/icons/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="/static/images/icons/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/static/images/icons/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/static/images/icons/manifest.json">
+<link rel="mask-icon" href="/static/images/icons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/static/images/icons/favicon.ico">
 <meta name="msapplication-TileColor" content="#2b5797">
-<meta name="msapplication-TileImage" content="http://polylearn.co/static/images/icons/mstile-144x144.png">
-<meta name="msapplication-config" content="http://polylearn.co/static/images/icons/browserconfig.xml">
+<meta name="msapplication-TileImage" content="/static/images/icons/mstile-144x144.png">
+<meta name="msapplication-config" content="/static/images/icons/browserconfig.xml">
 
 <meta name="theme-color" content="#2B3882">
