--- a/templates/concept.html
+++ b/templates/concept.html
@@ -34,7 +34,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                     <img src="https://cdn4.iconfinder.com/data/icons/flat-rounded-seo-icons/80/page-quality-128.png" width="100" height="100">
                   </div>
                 </div>
-                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h2 class="mdl-typography--title" style="margin:10px 0;">Contenu pédagogique d'une grande qualité</h2>
                   <p>
                     Nous portons une grande attention au contenu que nous vous mettons à disposition.
@@ -43,10 +43,10 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="https://cdn3.iconfinder.com/data/icons/ballicons-free/128/target.png" width="100" height="100">
+                    <img src="{{url_for('static', filename='images/features/target.png')}}" width="100" height="100">
                   </div>
                 </div>
-                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h2 class="mdl-typography--title" style="margin:10px 0;">Identification des faiblesses</h2>
                   <p>
                     <b>L'identification des faiblesses</b> est une technologie développé par <a href="{{ url_for('index')}}">PolyLearn</a> qui vous permet de cerner vos difficultés.
@@ -55,10 +55,10 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="https://cdn4.iconfinder.com/data/icons/banking-and-finance/500/graphs-128.png" width="100" height="100">
+                    <img src="{{url_for('static', filename='images/features/parcours.png')}}" width="100" height="100">
                   </div>
                 </div>
-                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h2 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et un parcours d'apprentissage sur-mesure</h2>
                   <p>
                   Grâce à nos technologies, nous sommes en mesure de vous proposer un <i>entrainement intelligent</i>  et un <i>parcours d'apprentissage optimisé</i>.
@@ -66,10 +66,10 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="https://cdn4.iconfinder.com/data/icons/web-development-5/500/computer-devices-responsive-128.png" width="100" height="100">
+                    <img src="{{url_for('static', filename='images/features/devices.png')}}" width="100" height="100">
                   </div>
                 </div>
-                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h2 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et des Applications mobiles</h2>
                   <p>
                     Grâce à notre plateforme internet et nos applications iOS & android, vous travaillez quand vous voulez.
