--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,6 +18,16 @@
       </div>
     </div>
     </a>
+
+    <a href="#">
+    <div class="demo-card-image mdl-card mdl-shadow--2dp mdl-cell about-panel-3">
+      <div class="mdl-card__title mdl-card--expand"></div>
+      <div class="mdl-card__actions">
+        <span class="demo-card-image__filename">BULATS</span>
+      </div>
+    </div>
+    </a>
+
   </div>
 
 </section>
