--- a/templates/index.html
+++ b/templates/index.html
@@ -83,8 +83,8 @@
     <div class="android-wear-band-text">
       <div class="mdl-typography--display-2 mdl-typography--font-thin">Ancrage mémoriel</div>
       <p>
-        <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
-          En savoir plus sur notre technologie&nbsp;<i class="material-icons">chevron_right</i>
+        <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="{{ url_for('concept')}}#technologys">
+          En savoir plus sur nos technologies&nbsp;<i class="material-icons">chevron_right</i>
         </a>
       </p>
     </div>
