footer separate TOEIC BULATS, and added includes for second_footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -66,8 +66,9 @@
       <i class="material-icons">arrow_drop_up</i>
     </a>
     <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="version-dropdown">
-      <li class="mdl-menu__item">TOEIC/BULATS</li>
+      <li class="mdl-menu__item">TOEIC</li>
       <li class="mdl-menu__item">Code de la route</li>
+      <li class="mdl-menu__item">BULATS</li>
     </ul>
 
     <!--
