--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
     <div class="demo-card-image mdl-card mdl-shadow--2dp mdl-cell about-panel-1">
       <div class="mdl-card__title mdl-card--expand"></div>
       <div class="mdl-card__actions">
-        <span class="demo-card-image__filename">TOEIC/BULATS</span>
+        <span class="demo-card-image__filename">TOEIC</span>
       </div>
     </div>
     </a>
@@ -66,7 +66,7 @@
       <i class="material-icons">arrow_drop_up</i>
     </a>
     <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="version-dropdown">
-      <li class="mdl-menu__item">TOEIC</li>
+      <a href="{{ app_url('toeic') }}"><li class="mdl-menu__item">TOEIC</li></a>
       <li class="mdl-menu__item">Code de la route</li>
       <li class="mdl-menu__item">BULATS</li>
     </ul>
