--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="android-be-together-section mdl-typography--text-center">
   <div class="android-font android-slogan">Réussir n'a jamais été aussi facile</div>
-  <div class="android-font android-sub-slogan">Bienvenue sur PolyLearn, nous utilisons une technologie d'ancrage mémoriel</div>
+  <div class="android-font android-sub-slogan">Venez découvrir une nouvelle méthode d'entrainement à la pointe de la technologie</div>
 
   <div class="mdl-grid">
     <a href="{{ app_url('toeic') }}" class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-phone">
